[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/Characters/Bat/attack 1/Bat_Attack1_1.png" type="Texture" id=1]
[ext_resource path="res://entities/enemies/Turret.gd" type="Script" id=2]
[ext_resource path="res://entities/enemies/TurretProjectile.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/Characters/Bat/attack 1/Bat_Attack1_5.png" type="Texture" id=4]
[ext_resource path="res://assets/Characters/Bat/attack 1/Bat_Attack1_3.png" type="Texture" id=5]
[ext_resource path="res://assets/Characters/Bat/attack 1/Bat_Attack1_4.png" type="Texture" id=6]
[ext_resource path="res://assets/Characters/Bat/attack 1/Bat_Attack1_2.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 24.0
height = 0.0

[node name="Turret" type="Area2D"]
script = ExtResource( 2 )
projectile_scene = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.373333, 0.373333 )
frames = SubResource( 1 )
frame = 4
playing = true

[node name="FireTimer" type="Timer" parent="."]

[node name="FirePosition" type="Position2D" parent="."]
position = Vector2( -20, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( -24, 32 )
enabled = true
cast_to = Vector2( -500, 500 )

[node name="RC_noAttack" type="RayCast2D" parent="."]
position = Vector2( 24, 32 )
enabled = true
cast_to = Vector2( 800, 500 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
